[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player_Enemy/NPC_Map_1_0.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 32.5 )

[node name="NPC_Map_1_0" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 1, 0.0392157, 1 )
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -30.0
margin_top = -95.0
margin_right = 32.0
margin_bottom = -81.0
text = "Nhiem vu"

[node name="Label2" type="Label" parent="."]
margin_left = -68.0
margin_top = -94.0
margin_right = 69.0
margin_bottom = -80.0
text = "Nhiem vu hoan thanh"

[connection signal="body_entered" from="." to="." method="_on_NPC_Map_1_0_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_Map_1_0_body_exited"]
